# padel-video-coach

./: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py
backend/app/models/: analysis.py
backend/app/services/: analysis_service.py  calibration_suggestion.py  rally_detection.py  rally_generation.py  video_probe.py  video_storage.py
backend/tests/: test_health.py
frontend/: app.json  eslint.config.js  package.json  tamagui.config.ts  tsconfig.json
frontend/src/app/(tabs)/: report.tsx  upload.tsx
frontend/src/app/analysis/: [id].tsx
frontend/src/app/matches/: [id].tsx
frontend/src/app/players/: [id].tsx
frontend/src/components/: Button.tsx  CourtPreview.tsx  PageHeader.tsx  RallyDecisionCard.tsx  StatTile.tsx  StepList.tsx
frontend/src/types/: match.ts
src/app/: _layout.tsx
src/app/(tabs)/: _layout.tsx  index.tsx  report.tsx  review.tsx  upload.tsx
src/app/analysis/: [id].tsx
src/app/calibration/: [id].tsx
src/app/matches/: [id].tsx
src/app/players/: [id].tsx
src/app/rallies/: [id].tsx
src/components/: Badge.tsx  Button.tsx  MatchCard.tsx  Screen.tsx
src/constants/: theme.ts
src/data/: mockMatches.ts
src/services/: backendApi.ts
src/store/: matchStore.tsx
src/types/: match.ts
src/utils/: format.ts  stats.ts
